--- a/6gsr.js-newsapp/package.json
+++ b/6gsr.js-newsapp/package.json
@@ -1,10 +1,13 @@
 {
+  "homepage": "http://github37-hub/6gsr.js-newsapp",
   "name": "6gsr.js-newsapp",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
