--- a/6gsr.js-newsapp/package.json
+++ b/6gsr.js-newsapp/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github37-hub.github.io/6gsr.js-newsapp/",
+  "homepage": "https://github37-hub.github.io/6gsr.js-newsapp",
   "name": "6gsr.js-newsapp",
   "private": true,
   "version": "0.0.0",
