--- a/6gsr.js-newsapp/package.json
+++ b/6gsr.js-newsapp/package.json
@@ -1,6 +1,6 @@
 
 {
-  "homepage": "http://{github37-hub}.github.io/{6gsr.js-newsapp}",
+  "homepage": "http://github37-hub.github.io/6gsr.js-newsapp",
   "name": "6gsr.js-newsapp",
   "private": true,
   "version": "0.0.0",
