--- a/6gsr.js-newsapp/package.json
+++ b/6gsr.js-newsapp/package.json
@@ -1,4 +1,3 @@
-
 {
   "homepage": "http://github37-hub.github.io/6gsr.js-newsapp",
   "name": "6gsr.js-newsapp",
@@ -6,8 +5,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -26,6 +25,7 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
+    "gh-pages": "^6.1.1",
     "globals": "^15.9.0",
     "vite": "^5.4.1"
   }
