--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "devDependencies": {
-    "gh-pages": "^6.1.1",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build"
+    "gh-pages": "^6.1.1"
+   
   }
 }
